--- a/Desktop/task/src/app/department/department-list/department-list.component.html
+++ b/Desktop/task/src/app/department/department-list/department-list.component.html
@@ -1,20 +1,20 @@
-<div class="row">
+<div class="row justify-content-lg-start justify-content-center">
   <div class="card" *ngFor="let department of departments">
     <div class="card-body">
       <h5 class="card-title">{{department.name}}</h5>
       <p class="card-text">{{department.description}}</p>
-      <a  class="btn view" [routerLink]="['/view-department',department.id]">View</a>
-      <a *ngIf="authService.isAuthorized(department.id) || authService.isSuperAdmin()" class="btn " [routerLink]="['/edit-department',department.id]">Edit</a>
-      <button *ngIf="authService.isSuperAdmin()" class="btn w-30 " (click)="delete(department.id)">Delete</button>
+      <a placement="top" ngbTooltip="Click to view the department!"  class="btn view" [routerLink]="['/view-department',department.id]">View</a>
+      <a placement="top" ngbTooltip="Click to edit the department!" *ngIf="authService.isAuthorized(department.id) || authService.isSuperAdmin()" class="btn " [routerLink]="['/departments/edit-department',department.id]">Edit</a>
+      <button placement="bottom" ngbTooltip="Delete this department!" *ngIf="authService.isSuperAdmin()" class="btn w-30 " (click)="delete(department.id, department.name)">Delete</button>
     </div>
   </div>
-  <div class="alert alert-danger" role="alert" *ngIf="departments.length === 0">
+  <div class="alert alert-danger mx-auto" role="alert" *ngIf="messageFromServer">
     {{messageFromServer}}
   </div>
 </div>
 
 
-<nav aria-label="Departments navigation" >
+<nav aria-label="Departments navigation" *ngIf="!messageFromServer && (totalNumberOfDepartments > pageSize)" >
   <ul class="pagination mx-auto ">
     <li class="page-item" (click)="nextPage(-1, true)"><span class="page-link" >Previous</span></li>
     <li
