--- a/Desktop/task/src/app/employee/ex-employees/ex-employees.component.css
+++ b/Desktop/task/src/app/employee/ex-employees/ex-employees.component.css
@@ -857,19 +857,8 @@ legend {
   box-sizing: border-box;
 }
 
-.s003 {
-  min-height: 100vh;
-  display: -ms-flexbox;
-  display: flex;
-  font-family: 'Poppins', sans-serif;
-  background-color: #a598ee;
-  background-size: cover;
-  background-position: center center;
-  padding: 15px;
-  flex-direction: column;
-}
 
-.s003 form {
+ form {
   width: 100%;
   max-width: 790px;
   margin-bottom: 0;
@@ -878,7 +867,7 @@ legend {
   margin-right: auto;
 }
 
-.s003 form .inner-form {
+ form .inner-form {
   background: #fff;
   display: -ms-flexbox;
   display: flex;
@@ -891,11 +880,11 @@ legend {
   border-radius: 3px;
 }
 
-.s003 form .inner-form .input-field {
+ form .inner-form .input-field {
   height: 68px;
 }
 
-.s003 form .inner-form .input-field input {
+ form .inner-form .input-field input {
   height: 100%;
   background: transparent;
   border: 0;
@@ -906,33 +895,33 @@ legend {
   color: #555;
 }
 
-.s003 form .inner-form .input-field input.placeholder {
+ form .inner-form .input-field input.placeholder {
   color: #888;
   font-size: 16px;
 }
 
-.s003 form .inner-form .input-field input:-moz-placeholder {
+ form .inner-form .input-field input:-moz-placeholder {
   color: #888;
   font-size: 16px;
 }
 
-.s003 form .inner-form .input-field input::-webkit-input-placeholder {
+ form .inner-form .input-field input::-webkit-input-placeholder {
   color: #888;
   font-size: 16px;
 }
 
-.s003 form .inner-form .input-field input:hover, .s003 form .inner-form .input-field input:focus {
+ form .inner-form .input-field input:hover,  form .inner-form .input-field input:focus {
   box-shadow: none;
   outline: 0;
   border-color: #fff;
 }
 
-.s003 form .inner-form .input-field.first-wrap {
+ form .inner-form .input-field.first-wrap {
   width: 200px;
   border-right: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.s003 form .inner-form .input-field.first-wrap .choices__inner {
+ form .inner-form .input-field.first-wrap .choices__inner {
   background: transparent;
   border-radius: 0;
   border: 0;
@@ -945,7 +934,7 @@ legend {
   padding: 10px 30px;
 }
 
-.s003 form .inner-form .input-field.first-wrap .choices__inner .choices__list.choices__list--single {
+ form .inner-form .input-field.first-wrap .choices__inner .choices__list.choices__list--single {
   display: -ms-flexbox;
   display: flex;
   padding: 0;
@@ -954,7 +943,7 @@ legend {
   height: 100%;
 }
 
-.s003 form .inner-form .input-field.first-wrap .choices__inner .choices__item.choices__item--selectable.choices__placeholder {
+ form .inner-form .input-field.first-wrap .choices__inner .choices__item.choices__item--selectable.choices__placeholder {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-align: center;
@@ -964,7 +953,7 @@ legend {
   color: #888;
 }
 
-.s003 form .inner-form .input-field.first-wrap .choices__inner .choices__list--single .choices__item {
+ form .inner-form .input-field.first-wrap .choices__inner .choices__list--single .choices__item {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-align: center;
@@ -973,12 +962,12 @@ legend {
   color: #555;
 }
 
-.s003 form .inner-form .input-field.first-wrap .choices[data-type*="select-one"]:after {
+ form .inner-form .input-field.first-wrap .choices[data-type*="select-one"]:after {
   right: 30px;
   border-color: #e5e5e5 transparent transparent transparent;
 }
 
-.s003 form .inner-form .input-field.first-wrap .choices__list.choices__list--dropdown {
+ form .inner-form .input-field.first-wrap .choices__list.choices__list--dropdown {
   border: 0;
   background: #fff;
   padding: 20px 30px;
@@ -987,30 +976,30 @@ legend {
   box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
 }
 
-.s003 form .inner-form .input-field.first-wrap .choices__list.choices__list--dropdown .choices__item--selectable {
+ form .inner-form .input-field.first-wrap .choices__list.choices__list--dropdown .choices__item--selectable {
   padding-right: 0;
 }
 
-.s003 form .inner-form .input-field.first-wrap .choices__list--dropdown .choices__item--selectable.is-highlighted {
+ form .inner-form .input-field.first-wrap .choices__list--dropdown .choices__item--selectable.is-highlighted {
   background: #fff;
   color: #63c76a;
 }
 
-.s003 form .inner-form .input-field.first-wrap .choices__list--dropdown .choices__item {
+ form .inner-form .input-field.first-wrap .choices__list--dropdown .choices__item {
   color: #555;
   min-height: 24px;
 }
 
-.s003 form .inner-form .input-field.second-wrap {
+ form .inner-form .input-field.second-wrap {
   -ms-flex-positive: 1;
       flex-grow: 1;
 }
 
-.s003 form .inner-form .input-field.third-wrap {
+ form .inner-form .input-field.third-wrap {
   width: 74px;
 }
 
-.s003 form .inner-form .input-field.third-wrap .btn-search {
+ form .inner-form .input-field.third-wrap .btn-search {
   height: 100%;
   width: 100%;
   white-space: nowrap;
@@ -1021,57 +1010,57 @@ legend {
   transition: all .2s ease-out, color .2s ease-out;
 }
 
-.s003 form .inner-form .input-field.third-wrap .btn-search svg {
+ form .inner-form .input-field.third-wrap .btn-search svg {
   width: 16px;
 }
 
-.s003 form .inner-form .input-field.third-wrap .btn-search:hover {
+ form .inner-form .input-field.third-wrap .btn-search:hover {
   background: #50c058;
 }
 
-.s003 form .inner-form .input-field.third-wrap .btn-search:focus {
+ form .inner-form .input-field.third-wrap .btn-search:focus {
   outline: 0;
   box-shadow: none;
 }
 
 @media screen and (max-width: 992px) {
-  .s003 form .inner-form .input-field {
+   form .inner-form .input-field {
     height: 50px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .s003 form .inner-form {
+   form .inner-form {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     padding: 20px;
   }
-  .s003 form .inner-form .input-field {
+   form .inner-form .input-field {
     margin-bottom: 20px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   }
-  .s003 form .inner-form .input-field input {
+   form .inner-form .input-field input {
     padding: 10px 15px;
   }
-  .s003 form .inner-form .input-field.first-wrap {
+   form .inner-form .input-field.first-wrap {
     width: 100%;
     border-right: 0;
   }
-  .s003 form .inner-form .input-field.first-wrap .choices__inner {
+   form .inner-form .input-field.first-wrap .choices__inner {
     padding: 10px 15px;
   }
-  .s003 form .inner-form .input-field.first-wrap .choices[data-type*="select-one"]:after {
+   form .inner-form .input-field.first-wrap .choices[data-type*="select-one"]:after {
     right: 11.5px;
     border-color: #e5e5e5 transparent transparent transparent;
   }
-  .s003 form .inner-form .input-field.second-wrap {
+   form .inner-form .input-field.second-wrap {
     width: 100%;
     margin-bottom: 30px;
   }
-  .s003 form .inner-form .input-field.second-wrap input {
+   form .inner-form .input-field.second-wrap input {
     border: 1px solid rgba(255, 255, 255, 0.3);
   }
-  .s003 form .inner-form .input-field.third-wrap {
+   form .inner-form .input-field.third-wrap {
     margin-bottom: 0;
     width: 100%;
   }
@@ -1085,3 +1074,8 @@ ul.pagination {
   cursor: pointer;
 }
 
+@media only screen and (max-width: 673px) {
+  .name-jobPosition {
+    line-height: 24px;
+  }
+}
