--- a/Desktop/task/src/app/auth/create-admin/create-admin.component.html
+++ b/Desktop/task/src/app/auth/create-admin/create-admin.component.html
@@ -1,4 +1,4 @@
-<div class="_container">
+<div class="_container" #TopCard>
   <div class="card text-center mx-auto" [ngClass]="{
     'card-success': createAdmin?.valid && createAdmin.dirty
   }">
@@ -7,7 +7,7 @@
     }">
       Create Admin
     </div>
-    <div *ngIf="messageFromServer" class="card-header text-success">
+    <div *ngIf="messageFromServer" class="card-header text-danger">
       {{messageFromServer}}
     </div>
 
@@ -16,7 +16,7 @@
       <form (submit)="onSubmit()" [formGroup]="createAdmin">
         <div class="form-group">
           <label for="name">Enter Name</label>
-          <input specialIsAlphaNumeric type="text" class="form-control" id="name" formControlName="name" [ngClass]="{
+          <input specialIsAlphaNumericWithSpace type="text" class="form-control" id="name" formControlName="name" [ngClass]="{
               'form-control-success': name.valid && name.dirty
             }" value="{{createAdmin.value.name}}">
           <div *ngIf="name.invalid && (name.dirty || name.touched)" class="text-danger mt-2">
@@ -30,7 +30,7 @@
         </div>
         <div class="form-group">
           <label for="surname">Enter Surname</label>
-          <input specialIsAlphaNumeric type="email" class="form-control" id="surname" formControlName="surname" [ngClass]="{
+          <input specialIsAlphaNumericWithSpace type="email" class="form-control" id="surname" formControlName="surname" [ngClass]="{
               'form-control-success': surname.valid && surname.dirty
             }" value="{{createAdmin.value.surname}}">
           <div *ngIf="surname.invalid && (surname.dirty || surname.touched)" class="text-danger mt-2">
