--- a/Desktop/task/src/app/employee/create-employee/create-employee.component.css
+++ b/Desktop/task/src/app/employee/create-employee/create-employee.component.css
@@ -96,3 +96,12 @@
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px hsl(52, 94%, 52%);
   box-shadow        : inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px hsl(52, 94%, 52%);
 }
+
+image-cropper {
+  width: 200px;
+  display: inline-block;
+}
+
+.finale-image {
+  width: 230px;
+}
