--- a/Desktop/task/src/app/employee/search-employee/search-employee.component.css
+++ b/Desktop/task/src/app/employee/search-employee/search-employee.component.css
@@ -43,3 +43,9 @@ ul.pagination {
   cursor: pointer;
 }
 
+
+@media only screen and (max-width: 407px) {
+  .name-jobPosition {
+    line-height: 24px;
+  }
+}
