--- a/Desktop/task/src/app/job-position/create-position/create-position.component.html
+++ b/Desktop/task/src/app/job-position/create-position/create-position.component.html
@@ -10,7 +10,7 @@
     }">
       Create Job Position
     </div>
-    <div *ngIf="messageFromServer && !editMode" class="card-header"
+    <div *ngIf="messageFromServer" class="card-header"
     [ngClass]="{
       'text-success': !error,
       'text-danger': error
@@ -59,7 +59,7 @@
             </div>
           </div>
         </div>
-        <div class="form-group">
+        <div class="form-group" *ngIf="!editMode">
           <label for="positionDepartment">Witch Department?</label>
           <select class="form-control" formControlName="departmentId" id="positionDepartment">
             <option *ngFor="let department of departments" [ngValue]="department.id">
