--- a/Desktop/task/src/app/job-position/positions-list/positions-list.component.html
+++ b/Desktop/task/src/app/job-position/positions-list/positions-list.component.html
@@ -1,8 +1,8 @@
-<div class="card" style="width: 18rem;">
+<div class="card" >
   <div class="card-body">
     <h6 class="card-title">{{position.name}}</h6>
     <p class="card-text">{{position.description | slice:0:210}}...</p>
-    <a *ngIf="authService.isAuthorized(position.departmentId) || authService.isSuperAdmin()"  class="btn " [routerLink]="['/edit-position',position.id]">Edit</a>
-    <button *ngIf="authService.isAuthorized(position.departmentId) || authService.isSuperAdmin()"  class="btn w-30 " (click)="delete(position.id)">Delete</button>
+    <a placement="top" ngbTooltip="Click to edit this job position!" *ngIf="authService.isAuthorized(position.departmentId) || authService.isSuperAdmin()"  class="btn " [routerLink]="['/departments/edit-position',position.id]">Edit</a>
+    <button placement="top" ngbTooltip="Click to delete this job position!" *ngIf="authService.isAuthorized(position.departmentId) || authService.isSuperAdmin()"  class="btn w-30 " (click)="delete(position.id)">Delete</button>
   </div>
 </div>
